# osc-chatbox

./: .qmlls.ini  Cargo.toml  PKGBUILD  build.rs  osc-chatbox.desktop
qml/: main.qml
src/: cxxqt_object.rs  main.rs  orchestrator.rs  smalltext.rs
src/modules/: afk.rs  heartrate.rs  media.rs  mod.rs  network.rs  stats.rs  status.rs  system_details.rs  time.rs
src/osc/: mod.rs
