[package]
name = "osc-chatbox"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["full"] }
rosc = "0.10"
sysinfo = "0.33"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
